# PySpark_BigData

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  spark_processing.py
airflow/dags/: big_data_dag.py
airflow/dags/scripts/: fetch_data.py  process_data.py
config/: airflow.cfg
config/airflow.cfg/: airflow.cfg  airflow.cfg~
data/: finance_data.csv  finance_data_AAPL.csv  finance_stock_data.csv  finance_stock_data_META.csv
data/processed_data/: .part-00000-3435767d-b025-4ad8-96f1-6eb4cf177d56-c000.csv.crc  .part-00000-b2234126-87de-4265-b35b-6ee82991e1a6-c000.csv.crc  part-00000-3435767d-b025-4ad8-96f1-6eb4cf177d56-c000.csv  part-00000-b2234126-87de-4265-b35b-6ee82991e1a6-c000.csv
data/processed_data.csv/: .part-00000-ee618129-63aa-4f48-a3e2-2342d34ada75-c000.csv.crc  part-00000-ee618129-63aa-4f48-a3e2-2342d34ada75-c000.csv
data/processed_output.csv/: .part-00000-1a81ce65-cad7-48dc-8bbe-53fe13d58baa-c000.csv.crc  part-00000-1a81ce65-cad7-48dc-8bbe-53fe13d58baa-c000.csv
data/processed_output_1.csv/: .part-00000-30aa9e35-1588-405d-82ae-72b165536cd2-c000.csv.crc  part-00000-30aa9e35-1588-405d-82ae-72b165536cd2-c000.csv
scripts/: fetch_data.py  process_data.py
